🎒🐊 Checkpoint ./client/index.html:51974198/422 ./package.json:51974198/1207

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
 <title>TextWall</title>
-<link rel="icon" sizes="192x192" href="/static/icons/icon.png">
+<link rel="icon" sizes="192x192" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/icon.png?v=1705148941918">
 <link rel="apple-touch-icon" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-icon.png?v=1705148834267">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor.">
@@ -24,7 +24,7 @@
 <div id="toast"></div>
 <div id="teleport">
 <div id="closeteleport">
-<img alt="cancel" src="/static/cancel.svg">
+<img alt="cancel" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cancel.svg?v=1705148636869">
 </div>
 <span class="tptitle">Teleport</span>
 <form>
@@ -48,7 +48,7 @@
 <div id="chat" class="hidden">
 <div class="buttoncontainer">
 <div id="chatbutton">
-<img alt="chat" class="button" src="/static/chat.svg">
+<img alt="chat" class="button" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/chat.svg?v=1705148637196">
 <div id="unread"></div>
 </div>
 </div>
@@ -56,7 +56,7 @@
 <div id="chatbox"></div>
 <div class="msgcontainer">
 <input maxlength="180" type="text" title="type a message" id="chatmsg">
-<img alt="send" id="sendmsg" class="button" src="/static/send.svg">
+<img alt="send" id="sendmsg" class="button" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/send.svg?v=1705148642019">
 </div>
 </div>
 </div>
