--- a/client/index.html
+++ b/client/index.html
@@ -168,7 +168,7 @@
 <div id="admin">
 <h3>Admin</h3>
 <input id="l" type="checkbox"><br>
-<input type="text" id="t"></input><br>
+<input type="text" id="t"><br>
 <input id="refresh" value="Refresh" type="button"><br>
 <textarea id="alerttext"></textarea><br>
 <input id="sendalert" value="Send" type="button"><br>
@@ -180,7 +180,7 @@
 </div>
 <div class="sidething">
 <div id="closemenu">
-<img alt="cancel" src="/static/cancel.svg">
+<img alt="cancel" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cancel.svg?v=1705148636869">
 </div>
 <div id="colourlist"></div>
 </div>
@@ -198,12 +198,12 @@
 <span id="coords">0,0</span>
 </div>
 <div class="buttons">
-<div id="home" title="Home" class="infobtn"><img alt="home" src="/static/home.svg"></div>
-<div id="copy" title="Copy" class="infobtn"><img id="copyico" alt="copy" src="/static/copy.svg"></div>
-<div id="paste" title="Paste" class="infobtn"><img id="pasteico" alt="paste" src="/static/paste.svg"></div>
-<div id="openmenu" title="Colours" class="infobtn"><img alt="colour" src="/static/palette.svg"></div>
-<div id="options" title="Options" class="infobtn"><img alt="options" src="/static/settings.svg"></div>
-<div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="/static/sun.svg"></div>
+<div id="home" title="Home" class="infobtn"><img alt="home" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/home.svg?v=1705148638559"></div>
+<div id="copy" title="Copy" class="infobtn"><img id="copyico" alt="copy" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/copy.svg?v=1705148637538"></div>
+<div id="paste" title="Paste" class="infobtn"><img id="pasteico" alt="paste" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/paste.svg?v=1705148640639"></div>
+<div id="openmenu" title="Colours" class="infobtn"><img alt="colour" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/palette.svg?v=1705148640269"></div>
+<div id="options" title="Options" class="infobtn"><img alt="options" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/settings.svg?v=1705148642850"></div>
+<div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/sun.svg?v=1705148643973"></div>
 <div id="goto" title="Teleport" class="infobtn"><img alt="arrow" src="/static/go.svg"></div>
 </div>
 </div>
