🌠🍇 Checkpoint ./client/index.html:51974198/1488 ./server.js:51548543/304

--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
 <title>TextWall</title>
-<link rel="icon" sizes="192x192" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/icon.png?v=1705148941918">
-<link rel="apple-touch-icon" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/apple-icon.png?v=1705148834267">
+<link rel="icon" sizes="192x192" href="/static/icons/icon.png">
+<link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor.">
 <meta id="theme-colour" name="theme-color" content="#222222">
@@ -24,7 +24,7 @@
 <div id="toast"></div>
 <div id="teleport">
 <div id="closeteleport">
-<img alt="cancel" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cancel.svg?v=1705148636869">
+<img alt="cancel" src="/static/cancel.svg">
 </div>
 <span class="tptitle">Teleport</span>
 <form>
@@ -48,7 +48,7 @@
 <div id="chat" class="hidden">
 <div class="buttoncontainer">
 <div id="chatbutton">
-<img alt="chat" class="button" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/chat.svg?v=1705148637196">
+<img alt="chat" class="button" src="/static/chat.svg">
 <div id="unread"></div>
 </div>
 </div>
@@ -56,7 +56,7 @@
 <div id="chatbox"></div>
 <div class="msgcontainer">
 <input maxlength="180" type="text" title="type a message" id="chatmsg">
-<img alt="send" id="sendmsg" class="button" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/send.svg?v=1705148642019">
+<img alt="send" id="sendmsg" class="button" src="/static/send.svg">
 </div>
 </div>
 </div>
@@ -168,7 +168,7 @@
 <div id="admin">
 <h3>Admin</h3>
 <input id="l" type="checkbox"><br>
-<input type="text" id="t"><br>
+<input type="text" id="t"></input><br>
 <input id="refresh" value="Refresh" type="button"><br>
 <textarea id="alerttext"></textarea><br>
 <input id="sendalert" value="Send" type="button"><br>
@@ -180,7 +180,7 @@
 </div>
 <div class="sidething">
 <div id="closemenu">
-<img alt="cancel" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cancel.svg?v=1705148636869">
+<img alt="cancel" src="/static/cancel.svg">
 </div>
 <div id="colourlist"></div>
 </div>
@@ -198,12 +198,12 @@
 <span id="coords">0,0</span>
 </div>
 <div class="buttons">
-<div id="home" title="Home" class="infobtn"><img alt="home" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/home.svg?v=1705148638559"></div>
-<div id="copy" title="Copy" class="infobtn"><img id="copyico" alt="copy" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/copy.svg?v=1705148637538"></div>
-<div id="paste" title="Paste" class="infobtn"><img id="pasteico" alt="paste" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/paste.svg?v=1705148640639"></div>
-<div id="openmenu" title="Colours" class="infobtn"><img alt="colour" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/palette.svg?v=1705148640269"></div>
-<div id="options" title="Options" class="infobtn"><img alt="options" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/settings.svg?v=1705148642850"></div>
-<div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/sun.svg?v=1705148643973"></div>
+<div id="home" title="Home" class="infobtn"><img alt="home" src="/static/home.svg"></div>
+<div id="copy" title="Copy" class="infobtn"><img id="copyico" alt="copy" src="/static/copy.svg"></div>
+<div id="paste" title="Paste" class="infobtn"><img id="pasteico" alt="paste" src="/static/paste.svg"></div>
+<div id="openmenu" title="Colours" class="infobtn"><img alt="colour" src="/static/palette.svg"></div>
+<div id="options" title="Options" class="infobtn"><img alt="options" src="/static/settings.svg"></div>
+<div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="/static/sun.svg"></div>
 <div id="goto" title="Teleport" class="infobtn"><img alt="arrow" src="/static/go.svg"></div>
 </div>
 </div>
