💳👐 Checkpoint ./server.js:51548543/686 ./client/index.html:51974198/8

--- a/client/index.html
+++ b/client/index.html
@@ -168,7 +168,7 @@
 <div id="admin">
 <h3>Admin</h3>
 <input id="l" type="checkbox"><br>
-<input type="text" id="t"></input><br>
+<input type="text" id="t"><br>
 <input id="refresh" value="Refresh" type="button"><br>
 <textarea id="alerttext"></textarea><br>
 <input id="sendalert" value="Send" type="button"><br>
