🏤☄️ Checkpoint ./client/warning.js:51974198/201 ./client/index.html:51548543/119:51974198/24 ./server.js:51548543/30

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 <meta property="og:url" content="https://textwall.cc/">
 <meta property="og:image" content="/static/icons/icon.gif">
 <link rel="stylesheet" href="/static/textwall.css">
+<script src="/warning.js"></script>
 </head>
 <body>
 <textarea id="clipboard"></textarea>
@@ -223,6 +224,7 @@
 </div>
 <script src="/static/pep.min.js"></script>
 <script src="/static/textwall.js"></script>
+
 <script>
 		/*if ('serviceWorker' in navigator) {
 		window.addEventListener('load', function() {
