⚓️💂 Checkpoint ./client/index.html:51974198/85 ./client/static/textwall.js:51974198/72

--- a/client/index.html
+++ b/client/index.html
@@ -232,5 +232,6 @@
 		});
 		}*/
 	</script>
+  <script>console.log("if you're seeing this, the html should have loaded")</script>
 </body>
 </html>
