🌨🚿 Checkpoint ./server.js:51548543/3 ./client/static/textwall.js:51548543/2720:51974198/73 ./client/index.html:51974198/17 ./client/manifest.webmanifest:51974198/21

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" sizes="192x192" href="/static/icons/icon.png">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
-<meta name="description" content="Multiplayer text editor.">
+<meta name="description" content="Multiplayer text editor with freedom.">
 <meta id="theme-colour" name="theme-color" content="#222222">
 <meta property="og:title" content="TextWall">
 <meta property="og:type" content="website">
