🎺👜 Checkpoint ./client/static/textwall.js:51548543/31 ./client/index.html:51974198/35

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,9 @@
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor with freedom.">
 <meta id="theme-colour" name="theme-color" content="#222222">
-<meta property="og:title" content="TextWall">
+<meta property="og:title" content="Dimka's TextWall">
 <meta property="og:type" content="website">
-<meta property="og:description" content="Multiplayer text editor.">
+<meta property="og:description" content="Multiplayer text editor with freedom.">
 <meta property="og:url" content="https://textwall.cc/">
 <meta property="og:image" content="/static/icons/icon.gif">
 <link rel="stylesheet" href="/static/textwall.css">
@@ -29,7 +29,7 @@
 </div>
 <span class="tptitle">Teleport</span>
 <form>
-<label for="tpword">Where would you like to go?</label>
+<label for="tpword">Where would you like to teleport?</label>
 <input id="tpword" maxlength="250" type="text">
 <input type="submit" id="tpwordgo" value="Go">
 </form>
