💝☕️ Checkpoint ./server.js:51974198/6 ./client/static/textwall.js:51974198/37 ./client/index.html:51974198/12

--- a/client/index.html
+++ b/client/index.html
@@ -195,7 +195,7 @@
 <canvas touch-action="none" id="canvas"></canvas>
 <div id="info">
 <div class="infotext">
-<span id="nearby">0 nearby</span>
+<span id="nearby">0 around</span>
 <span id="coords">0,0</span>
 </div>
 <div class="buttons">
