👾🍩 Checkpoint ./client/static/textwall.js:51974198/12 ./client/index.html:51974198/69

--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,11 @@
 <link rel="icon" sizes="192x192" href="/static/icons/icon.png">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
-<meta name="description" content="Multiplayer text editor with freedom.">
+<meta name="description" content="Multiplayer text editor with most freedom.">
 <meta id="theme-colour" name="theme-color" content="#222222">
 <meta property="og:title" content="Dimka's TextWall">
 <meta property="og:type" content="website">
-<meta property="og:description" content="Multiplayer text editor with freedom.">
+<meta property="og:description" content="Multiplayer text editor with most freedom.">
 <meta property="og:url" content="https://textwall.cc/">
 <meta property="og:image" content="/static/icons/icon.gif">
 <link rel="stylesheet" href="/static/textwall.css">
@@ -148,7 +148,7 @@
 </div>
 </div>
 <div id="wallsettings">
-<h1>Wall Settings</h1>
+<h1>Wall Actions</h1>
 <input id="protect" type="checkbox"><label for="protect">Protect</label><br>
 <input id="clear" type="checkbox"><label for="clear">Clear</label><br>
 <input id="readonly" type="checkbox"><label for="readonly">Read-only</label><br>
@@ -164,7 +164,7 @@
 </form>
 <div id="memberlist"></div>
 </div>
-<input id="deletewall" type="button" value="Delete wall">
+<input id="deletewall" type="button" value="Delete wall"> <small>(Dangerous!)</small>
 </div>
 <div id="admin">
 <h3>Admin</h3>
@@ -200,7 +200,7 @@
 </div>
 <div class="buttons">
 <div id="home" title="Home" class="infobtn"><img alt="home" src="/static/home.svg"></div>
-<div id="copy" title="Copy" class="infobtn"><img id="copyico" alt="copy" src="/static/copy.svg"></div>
+<div id="copy" title="Copy Selection" class="infobtn"><img id="copyico" alt="copy" src="/static/copy.svg"></div>
 <div id="paste" title="Paste" class="infobtn"><img id="pasteico" alt="paste" src="/static/paste.svg"></div>
 <div id="openmenu" title="Colours" class="infobtn"><img alt="colour" src="/static/palette.svg"></div>
 <div id="options" title="Options" class="infobtn"><img alt="options" src="/static/settings.svg"></div>
