--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
-<title>TextWall</title>
+<title>Dimka's TextWall</title>
 <link rel="icon" sizes="192x192" href="/static/icons/icon.png">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
