🏆🐪 Checkpoint ./client/index.html:51974198/89

--- a/client/index.html
+++ b/client/index.html
@@ -38,9 +38,9 @@
 <form class="coordinput">
 <div>
 <label for="tpx">X:</label>
-<input id="tpx" value="0" type="number"><br>
+<input id="tpx" type="number"><br>
 <label for="tpy">Y:</label>
-<input id="tpy" value="0" type="number">
+<input id="tpy" type="number">
 <input type="submit" id="tpcoordgo" value="Go">
 </div>
 </form>
@@ -168,6 +168,9 @@
 </div>
 <div id="admin">
 <h3>Admin</h3>
+  <p>
+    Sorry, not sure what you're trying to find.
+  </p>
 <input id="l" type="checkbox"><br>
 <input type="text" id="t"><br>
 <input id="refresh" value="Refresh" type="button"><br>
