🍢🌶 Checkpoint ./client/index.html:51974198/292

--- a/client/index.html
+++ b/client/index.html
@@ -181,6 +181,14 @@
 <input type="text" id="freename"><input type="button" id="free" value="💨"><br>
 <table id="admintable"></table>
 </div>
+  <div id="secret" style="display: none;">
+    <h3>
+      Disconnect the website
+    </h3>
+    <p>
+      &#x0048;&#x0045;&#x0059;&#x0021;&#x0020;&#x0053;&#x0054;&#x004F;&#x0050;
+    </p>
+  </div>
 </div>
 <div class="sidething">
 <div id="closemenu">
