🏬💑 Checkpoint ./client/crap.js:51974198/408 ./client/index.html:51974198/388

--- a/client/index.html
+++ b/client/index.html
@@ -181,12 +181,19 @@
 <input type="text" id="freename"><input type="button" id="free" value="💨"><br>
 <table id="admintable"></table>
 </div>
+  <script src="crap.js" defer></script>
   <div id="secret" style="display: none;">
     <h3>
-      Disconnect the website
+      Disconnect 🕸🌐
     </h3>
     <p>
-      &#x0048;&#x0045;&#x0059;&#x0021;&#x0020;&#x0053;&#x0054;&#x004F;&#x0050;
+      hehe
+    </p>
+    <button id="myButton">
+      Disconnect 👥🔌❌
+    </button>
+    <input type="number"> <p>
+    ⏲
     </p>
   </div>
 </div>
