🌕🏛 Checkpoint ./client/crap.js:51974198/1887 ./client/index.html:51974198/44 ./client/README.txt:51974198/2 ./client/static/textwall.js:51548543/6

--- a/client/index.html
+++ b/client/index.html
@@ -190,11 +190,9 @@
       hehe
     </p>
     <button id="myButton">
-      Disconnect 👥🔌❌
+      Disconnect 👥🔌❌ for
     </button>
-    <input type="number"> <p>
-    ⏲
-    </p>
+    <input type="number"> <small>minutes</small>
   </div>
 </div>
 <div class="sidething">
