🌇👐 Checkpoint ./server.js:51548543/99 ./client/index.html:51974198/64 ./client/manifest.webmanifest:51974198/27 ./client/static/textwall.js:51548543/44

--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,11 @@
 <link rel="icon" sizes="192x192" href="/static/icons/icon.png">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
-<meta name="description" content="Multiplayer text editor with most freedom.">
+<meta name="description" content="Multiplayer text editor, but better.">
 <meta id="theme-colour" name="theme-color" content="#222222">
 <meta property="og:title" content="Dimka's TextWall">
 <meta property="og:type" content="website">
-<meta property="og:description" content="Multiplayer text editor with most freedom.">
+<meta property="og:description" content="Multiplayer text editor, but better.">
 <meta property="og:url" content="https://textwall.cc/">
 <meta property="og:image" content="/static/icons/icon.gif">
 <link rel="stylesheet" href="/static/textwall.css">
