🏯👔 Checkpoint ./client/index.html:51974198/38

--- a/client/index.html
+++ b/client/index.html
@@ -222,7 +222,7 @@
 <div id="options" title="Options" class="infobtn"><img alt="options" src="/static/settings.svg"></div>
 <div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="/static/sun.svg"></div>
 <div id="goto" title="Teleport" class="infobtn"><img alt="arrow" src="/static/go.svg"></div>
-<div id="discord" title="Discord" class="infobtn"><img alt="discord" src="/static/discord.svg"></div>
+<div title="Discord" class="infobtn"><a href=""><img alt="discord" src="/static/discord.svg"></a></div>
 </div>
 </div>
 <div id="decorations">
