🚕🍮 Checkpoint ./server.js:51548543/956 ./.glitch-assets:51974198/845 ./client/index.html:51974198/135

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
 <title>Dimka's TextWall</title>
-<link rel="icon" sizes="192x192" href="/static/icons/icon.png">
+<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/dimkatextwall%20icon.png?v=1705304530671">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor, but better.">
