--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="google" content="notranslate">
 <title>Dimka's TextWall</title>
-<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/dimkatextwall%20icon.png?v=1705304530671">
+<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/zoomed%20in%20dimkatextwall%20icon.png?v=1705304737992">
 <link rel="apple-touch-icon" href="/static/icons/apple-icon.png">
 <link rel="manifest" href="/manifest.webmanifest">
 <meta name="description" content="Multiplayer text editor, but better.">
@@ -14,7 +14,7 @@
 <meta property="og:type" content="website">
 <meta property="og:description" content="Multiplayer text editor, but better.">
 <meta property="og:url" content="https://textwall.cc/">
-<meta property="og:image" content="/static/icons/icon.gif">
+<meta property="og:image" content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/dimkatextwall%20icon.png?v=1705304616584">
 <link rel="stylesheet" href="/static/textwall.css">
 <script src="/warning.js"></script>
 </head>
