🚿⛷ Checkpoint ./client/static/textwall.js:51548543/16 ./client/index.html:51548543/8:51974198/40

--- a/client/index.html
+++ b/client/index.html
@@ -170,14 +170,14 @@
     <h3>
       Debug
     </h3>
-    <button onclick="disconnectfromServer">
+    <button onclick="disconnectfromServer()">
       Disconnect from server
     </button>
     <script>
     function disconnectfromServer() {
         // Your script logic here
         ws.close();
-        alert("Disconnected!");
+        console.warn("Disconnected! (through debug menu)");
     }
     </script>
   </div>
