🙆🛳 Checkpoint ./client/index.html:51548543/62

--- a/client/index.html
+++ b/client/index.html
@@ -237,7 +237,7 @@
 <div id="options" title="Options" class="infobtn"><img alt="options" src="/static/settings.svg"></div>
 <div id="theme" title="Theme" class="infobtn"><img id="themeico" alt="theme" src="/static/sun.svg"></div>
 <div id="goto" title="Teleport" class="infobtn"><img alt="arrow" src="/static/go.svg"></div>
-<div title="Discord" class="infobtn"><a href="https://discord.gg/rNAQaF8FDs" target="_blank"><img alt="discord" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg?v=1705245986519" width="20" height="20"></a></div>
+<div title="Discord" class="infobtn"><a href="https://discord.gg/rNAQaF8FDs" target="_blank"><img alt="discord" src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/discord.svg?v=1705245986519" style="width: 20px;padding-top: 4.85px;"></a></div>
 </div>
 </div>
 <div id="decorations">
