📼📌 Checkpoint ./client/index.html:51974198/562

--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,7 @@
 <input id="copycolour" type="checkbox"><label for="copycolour">Copy colours</label><br>
 <input id="copydecorations" type="checkbox"><label for="copydecorations">Copy decorations</label><br>
 <input id="rainbow" type="checkbox"><label for="rainbow">Rainbow text</label><br><br>
+<label>t76w6eque1u2y3yg11111whar qw????? u amm what?? huhuh???? hot sex hahhhhhhhhhhhhhhhhhhhjqw eeeeeeee.... ee sex...uhygh yeahhhhhhhhhh</label>
 <label for="zoom">Zoom: </label><input type="range" min="5" max="30" value="10" id="zoom"><br><br>
 <label for="fontselect">Font: </label><select id="fontselect"></select><br>
 <fieldset id="fontmenu" class="hidden">
@@ -80,6 +81,7 @@
 <label for="customfont">Name:</label><input id="customfont" type="text"><br>
 <label for="customfontsize">Size:</label><input id="customfontsize" type="number" min="1" max="20" value="20"><br>
 </fieldset>
+  <label>what/? hwheere am i typing hahahawheiweurefhjrtui yhtesuiteyiirshyprt</label>
 <fieldset id="thememenu" class="hidden">
 <legend>Custom Theme</legend>
 <label for="primary">Primary:</label><input id="primary" type="color" value="#FFFCE5"><br>
@@ -136,6 +138,7 @@
 <input type="submit" id="submitpasschange" value="Change password">
 </fieldset>
 </form>
+  <label>no... stop dont fdleete your acohtn hhhah unless some person named dimka wants you to delete it</label>
 <form id="delaccountform">
 <fieldset>
 <legend>Delete account</legend>
@@ -153,6 +156,7 @@
 <input id="clear" type="checkbox"><label for="clear">Clear</label><br>
 <input id="readonly" type="checkbox"><label for="readonly">Read-only</label><br>
 <input id="private" type="checkbox"><label for="private">Private</label><br>
+  <label>i am placig ny my penis on penis becuase penis hhahahah laugh</label>
 <input id="hidecursors" type="checkbox"><label for="hidecursors">Hide cursors</label><br>
 <input id="disablechat" type="checkbox"><label for="disablechat">Disable chat</label><br>
 <input id="walldisablecolour" type="checkbox"><label for="walldisablecolour">Disable colour</label><br>
@@ -168,7 +172,7 @@
 </div>
   <div>
     <h3>
-      Debug
+      Debug spray to reomove dugs i mean bugs
     </h3>
     <button onclick="disconnectfromServer()">
       Disconnect from server
