--- a/client/index.html
+++ b/client/index.html
@@ -138,7 +138,7 @@
 <input type="submit" id="submitpasschange" value="Change password">
 </fieldset>
 </form>
-  <label>no... stop dont fdleete your acohtn hhhah unless some person named dimka wants you to delete it</label>
+  <label>no... stop dont delete your account unless Dimka wants you to delete it</label>
 <form id="delaccountform">
 <fieldset>
 <legend>Delete account</legend>
@@ -172,7 +172,7 @@
 </div>
   <div>
     <h3>
-      Debug spray to reomove dugs i mean bugs
+      Debug shit
     </h3>
     <button onclick="disconnectfromServer()">
       Disconnect from server
