🙍👧 Checkpoint ./client/index.html:51548543/24:51974198/248

--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,7 @@
 <input id="copycolour" type="checkbox"><label for="copycolour">Copy colours</label><br>
 <input id="copydecorations" type="checkbox"><label for="copydecorations">Copy decorations</label><br>
 <input id="rainbow" type="checkbox"><label for="rainbow">Rainbow text</label><br><br>
-<label>t76w6eque1u2y3yg11111whar qw????? u amm what?? huhuh???? hot sex hahhhhhhhhhhhhhhhhhhhjqw eeeeeeee.... ee sex...uhygh yeahhhhhhhhhh</label>
+<label></label>
 <label for="zoom">Zoom: </label><input type="range" min="5" max="30" value="10" id="zoom"><br><br>
 <label for="fontselect">Font: </label><select id="fontselect"></select><br>
 <fieldset id="fontmenu" class="hidden">
@@ -81,7 +81,7 @@
 <label for="customfont">Name:</label><input id="customfont" type="text"><br>
 <label for="customfontsize">Size:</label><input id="customfontsize" type="number" min="1" max="20" value="20"><br>
 </fieldset>
-  <label>what/? hwheere am i typing hahahawheiweurefhjrtui yhtesuiteyiirshyprt</label>
+  <label></label>
 <fieldset id="thememenu" class="hidden">
 <legend>Custom Theme</legend>
 <label for="primary">Primary:</label><input id="primary" type="color" value="#FFFCE5"><br>
@@ -126,6 +126,7 @@
 </fieldset>
 </form>
 <form id="changepassform">
+  <!-- e? -->
 <fieldset>
 <legend>Change password</legend>
 <input type="text" autocomplete="username" style="display: none;">
@@ -138,7 +139,7 @@
 <input type="submit" id="submitpasschange" value="Change password">
 </fieldset>
 </form>
-  <label>no... stop dont delete your account unless Dimka wants you to delete it</label>
+  <label>no... stop, dont delete your account unless "Dimka" wants you to delete it</label>
 <form id="delaccountform">
 <fieldset>
 <legend>Delete account</legend>
