🎱🌜 Checkpoint ./server.js:51974198/2 ./colors.js:51548543/1376:51974198/33 ./client/index.html:51548543/48

--- a/client/index.html
+++ b/client/index.html
@@ -258,6 +258,7 @@
 <img alt="strikethrough" title="strikethrough" src="/static/strikethrough.svg">
 </div>
 </div>
+<script src="/static/colors.js"></script>
 <script src="/static/pep.min.js"></script>
 <script src="/static/textwall.js"></script>
 
