🍅🎒 Checkpoint ./client/maintenance.html:51548543/145:51974198/1409 ./client/static/textwall.js:51548543/153

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,7 +1,23 @@
-<body style="background: #141414; color: white; font-size: 32px;display: flex;flex-direction: column;align-items: center;height: 100vh;justify-content: center;overflow-y:hidden;">
+<body
+  style="
+    background: #141414;
+    color: white;
+    font-size: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+  "
+>
   <span>Dimka's TextWall is currently under maintenance for now.</span>
-  <br>
-  <span>You can join the Discord server at <a href="https://discord.gg/rDXPEgFA6m">https://discord.gg/rDXPEgFA6m</a></span>
-  <script>console.log("Dimka's TextWall servers are under maintenance...");
-          console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m")</script>
+  <span>We're making new things...</span><br />
+  <small>
+    (You can join the <a href="https://discord.gg/rDXPEgFA6m">Discord server</a> while you wait)
+  </small>
+  <script>
+    console.log("Dimka's TextWall servers are under maintenance...");
+    console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
+  </script>
 </body>
