🦂🌒 Checkpoint ./client/maintenance.html:51548543/8:51974198/124 ./server.js:51548543/67 ./.glitch-assets:51974198/415

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,6 +1,6 @@
 <body
   style="
-    background: #141414;
+    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%201.png?v=1705587407975')
     color: white;
     font-size: 32px;
     display: flex;
@@ -11,7 +11,7 @@
     margin: 0;
   "
 >
-  <span>Dimka's TextWall is currently under maintenance for now.</span>
+  <span>Dimka's TextWall is currently under maintenance.</span>
   <span>We're making new things...</span><br />
   <small>
     (You can join the <a href="https://discord.gg/rDXPEgFA6m">Discord server</a> while you wait)
