🐊🚨 Checkpoint ./client/static/textwall.js:51548543/7:51974198/29 ./client/index.html:51974198/46 ./client/maintenance.html:51974198/641

--- a/client/index.html
+++ b/client/index.html
@@ -172,7 +172,7 @@
 </div>
   <div>
     <h3>
-      Debug shit
+      Debug
     </h3>
     <button onclick="disconnectfromServer()">
       Disconnect from server
@@ -190,7 +190,7 @@
   <p>
     Sorry, not sure what you're trying to find.
   </p>
-<input id="l" type="checkbox"><br>
+<label>Login to type?</label><input id="l" type="checkbox"><br>
 <input type="text" id="t"><br>
 <input id="refresh" value="Refresh" type="button"><br>
 <textarea id="alerttext"></textarea><br>
