--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,6 +1,6 @@
 <body
   style="
-    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%201.png?v=1705587407975')
+    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%201.png');
     color: white;
     font-size: 32px;
     display: flex;
