🌦✂️ Checkpoint ./server.js:51548543/122 ./client/maintenance.html:51974198/733 ./.glitch-assets:51974198/387

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,3 +1,10 @@
+<head>
+<meta property="og:title" content="Dimka's TextWall">
+<meta property="og:type" content="website">
+<meta property="og:description" content="The site is currently down... Sorry!">
+<meta property="og:url" content="https://textwall.cc/">
+<meta property="og:image" content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20icon.png?v=1705588490580">
+</head>
 <body
   style="
     background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%201.png');
