🐟📻 Checkpoint ./server.js:51548543/181:51974198/101 ./client/maintenance.html:51548543/24:51974198/454 ./.glitch-assets:51974198/404

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -4,6 +4,8 @@
 <meta property="og:description" content="The site is currently down... Sorry!">
 <meta property="og:url" content="https://textwall.cc/">
 <meta property="og:image" content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20icon.png?v=1705588490580">
+<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20web%20icon.png?v=1705589045674">
+  <title>Dimka's TextWall is down</title>
 </head>
 <body
   style="
@@ -21,7 +23,7 @@
   <span>Dimka's TextWall is currently under maintenance.</span>
   <span>We're making new things...</span><br />
   <small>
-    (You can join the <a href="https://discord.gg/rDXPEgFA6m">Discord server</a> while you wait)
+    (You can join the <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff;">Discord server</a> while you wait)
   </small>
   <script>
     console.log("Dimka's TextWall servers are under maintenance...");
