🎏🎒 Checkpoint ./.glitch-assets:51974198/414 ./client/maintenance.html:51548543/49:51974198/339

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,3 +1,5 @@
+<!-- So... what are you looking at? -->
+<!-- Sorry if you got interrupted by this screen -->
 <head>
 <meta property="og:title" content="Dimka's TextWall">
 <meta property="og:type" content="website">
@@ -9,7 +11,7 @@
 </head>
 <body
   style="
-    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%201.png');
+    background-image: url('https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance%20bg%202.png');
     color: white;
     font-size: 32px;
     display: flex;
@@ -18,6 +20,7 @@
     height: 100vh;
     justify-content: center;
     margin: 0;
+    background-position: bottom;
   "
 >
   <span>Dimka's TextWall is currently under maintenance.</span>
