❣️🏪 Checkpoint ./client/maintenance.html:51974198/114

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -1,5 +1,6 @@
-<!-- So... what are you looking at? -->
+<!-- Hey there! -->
 <!-- Sorry if you got interrupted by this screen -->
+<!-- But that's not my problem. -->
 <head>
 <meta property="og:title" content="Dimka's TextWall">
 <meta property="og:type" content="website">
