⛪️🚒 Checkpoint ./client/maintenance.html:51548543/81

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -32,5 +32,8 @@
   <script>
     console.log("Dimka's TextWall servers are under maintenance...");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
+    setTimeout(function() {
+      location.href="/";
+    }, 10000); 
   </script>
 </body>
