--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -34,6 +34,7 @@
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
     setTimeout(function() {
       location.href="/";
-    }, 10000); 
+    }, 10000);
+    <!-- backtolife is the "dimkatextwall is back" wall -->
   </script>
 </body>
