👓🏇 Checkpoint ./client/backtolife.html:51974198/1961 ./client/maintenance.html:51974198/75

--- a/client/backtolife.html
+++ b/client/backtolife.html
@@ -1,17 +1,28 @@
+<head>
+  <title>Back to Life</title>
+  <link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/image%20(3).png?v=1705305911443">
+</head>
 <body
   style="
-    background: black
+    background: black;
     color: white;
     font-size: 32px;
-    align-items: center;
+
     height: 100vh;
-    justify-content: center;
     margin: 0;
   ">
+  <center>
   <h1>
     Thank you for waiting.
   </h1>
   <p>
-  You will be redirected back to Dimka's TextWall in 10 seconds.
+  You will be redirected back to Dimka's TextWall in 5 seconds.
   </p>
-</body>
+</center>
+  <script>
+    console.log("Dimka's TextWall is back.");
+    console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
+    setTimeout(function() {
+      location.href="/";
+    }, 5000);
+  </script></body>
