--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -33,8 +33,7 @@
     console.log("Dimka's TextWall servers are under maintenance...");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
     setTimeout(function() {
-      location.href="/";
+      location.href="/backtolife.html";
     }, 10000);
-    <!-- backtolife is the "dimkatextwall is back" wall -->
   </script>
 </body>
