🎯🙌 Checkpoint ./server.js:51548543/20 ./client/maintenance.html:51548543/622 ./client/static/textwall.js:51548543/292140

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -33,7 +33,12 @@
     console.log("Dimka's TextWall servers are under maintenance...");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
     setTimeout(function() {
-      location.href="/backtolife.html";
+      location.href="/"; // a problem with redirecting to backtolife (to dimka):
+      //if the server is still in maintenance mode, it will redirect to there 
+      //and then backtolife will redirect back to / which redirects to maintenance again
+      //but if you just redirect to /:
+      //the / will redirect to maintenance, and the 10 second timer will do it again
+      //if the server is no longer in maintenance mode, then it wont redirect to maintenance
     }, 10000);
   </script>
 </body>
