🔑💂 Checkpoint ./client/maintenance.html:51548543/73

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -34,8 +34,9 @@
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
     setTimeout(function() {
       location.href="/"; // a problem with redirecting to backtolife (to dimka):
-      //if the server is still in maintenance mode, it will redirect to there 
-      //and then backtolife will redirect back to / which redirects to maintenance again
+      //if the server is stibacktolifemaintenance mode, it will redirect to there 
+      //and then backtolife will redirect ba if the server is still
+      //in maintenance modeck to / which redirects to maintenance again
       //but if you just redirect to /:
       //the / will redirect to maintenance, and the 10 second timer will do it again
       //if the server is no longer in maintenance mode, then it wont redirect to maintenance
