--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -25,7 +25,7 @@
   "
 >
   <span>Dimka's TextWall is currently under maintenance.</span>
-  <span>We're making new things...</span><br />
+  <span>We are not releasing the sex update...</span><br />
   <small>
     (You can join the <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff;">Discord server</a> while you wait)
   </small>
@@ -33,7 +33,8 @@
     console.log("Dimka's TextWall servers are under maintenance...");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
     setTimeout(function() {
-      location.href="/";e mode, then it wont redirect to maintenance
+      location.href="/";
     }, 10000);
   </script>
 </body>
+
