📌👏 Checkpoint ./client/maintenance.html:51548543/14:51974198/4885 ./server.js:51548543/8:51974198/13 ./.glitch-assets:51974198/523

--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -2,12 +2,22 @@
 <!-- Sorry if you got interrupted by this screen -->
 <!-- But that's not my problem. -->
 <head>
-<meta property="og:title" content="Dimka's TextWall">
-<meta property="og:type" content="website">
-<meta property="og:description" content="The site is currently down... Sorry!">
-<meta property="og:url" content="https://textwall.cc/">
-<meta property="og:image" content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20icon.png?v=1705588490580">
-<link rel="icon" sizes="80x80" href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20web%20icon.png?v=1705589045674">
+  <meta property="og:title" content="Dimka's TextWall" />
+  <meta property="og:type" content="website" />
+  <meta
+    property="og:description"
+    content="The site is currently down... Sorry!"
+  />
+  <meta property="og:url" content="https://textwall.cc/" />
+  <meta
+    property="og:image"
+    content="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20icon.png?v=1705588490580"
+  />
+  <link
+    rel="icon"
+    sizes="80x80"
+    href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20web%20icon.png?v=1705589045674"
+  />
   <title>Dimka's TextWall is down</title>
 </head>
 <body
@@ -26,12 +36,27 @@
 >
   <span>Dimka's TextWall is currently under maintenance.</span>
   <span>We are not releasing the sex update...</span><br />
-  <audiosrc="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"></audio>
+  <audio
+    src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
+  ></audio>
   <small>
-    (You can join the <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff;">Discord server</a> while you wait)
+    (You can join the
+    <a href="https://discord.gg/rDXPEgFA6m" style="color: #0096ff"
+      >Discord server</a
+    >
+    while you wait, or watch this video:)<br /><center>
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube-nocookie.com/embed/0FrJCYT7Q9k?si=TLpBgYEVQUCkYqoR&amp;controls=0&amp;start=81"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe></center>
   </small>
   <script>
-    document.addEventListener("click", () => {
+    document.addEventListener("mousedown", () => {
       var audio = document.querySelector("audio");
       audio.currentTime = 0.15;
       // try making it loop
@@ -39,9 +64,8 @@
     });
     console.log("Dimka's TextWall servers are shitting their diapers");
     console.log("Join the Discord Server at https://discord.gg/rDXPEgFA6m !!!");
-    setTimeout(function() {
-      location.href="/";
+    setTimeout(function () {
+      location.href = "/";
     }, 10000);
   </script>
 </body>
-
