👩👛 Checkpoint ./server.js:51974198/2 ./client/maintenance.html:51974198/146 ./client/index.html:51974198/17 ./client/static/pep.min.js:51974198/57129

--- a/client/index.html
+++ b/client/index.html
@@ -269,6 +269,6 @@
 		});
 		}*/
 	</script>
-  <script>alert("if you're seeing this, the html should have loaded")</script>
+  <script>console.log("if you're seeing this, the html should have loaded");</script>
 </body>
 </html>
