--- a/client/maintenance.html
+++ b/client/maintenance.html
@@ -35,7 +35,7 @@
   "
 >
   <span>Dimka's TextWall is currently under maintenance.</span>
-  <span>We are not releasing the sex update...</span><br />
+  <span>We're making new things...</span><br />
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
   ></audio>
